# haskell

./: .gitignore  ChangeLog.md  README.md  flake.nix  shell.nix  stack.yaml
ci_build/: Dockerfile  outer_launch_tests.sh
docker/: Dockerfile
docker/gpu/: Dockerfile
docs/haddock/: doc-index-124.html  doc-index-47.html  doc-index-58.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  doc-index.html  index-frames.html  index.html  tensorflow
docs/haddock/tensorflow-0.1.0.0/: TensorFlow-Build.html  TensorFlow-BuildOp.html  TensorFlow-ControlFlow.html  TensorFlow-Core.html  TensorFlow-Internal-FFI.html  TensorFlow-Internal-VarInt.html  TensorFlow-Nodes.html  TensorFlow-Output.html  TensorFlow-Session.html  TensorFlow-Tensor.html  TensorFlow-Types.html  doc-index-124.html  doc-index-47.html  doc-index-58.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  (+13 more)
docs/haddock/tensorflow-0.1.0.2/: TensorFlow-Build.html  TensorFlow-BuildOp.html  TensorFlow-ControlFlow.html  TensorFlow-Core.html  TensorFlow-Internal-FFI.html  TensorFlow-Internal-VarInt.html  TensorFlow-Nodes.html  TensorFlow-Output.html  TensorFlow-Session.html  TensorFlow-Tensor.html  TensorFlow-Types.html  doc-index-47.html  doc-index-58.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html  mini_TensorFlow-Build.html  mini_TensorFlow-BuildOp.html  (+9 more)
docs/haddock/tensorflow-0.2.0.0/: TensorFlow-Build.html  TensorFlow-BuildOp.html  TensorFlow-ControlFlow.html  TensorFlow-Core.html  TensorFlow-Internal-FFI.html  TensorFlow-Internal-VarInt.html  TensorFlow-Nodes.html  TensorFlow-Output.html  TensorFlow-Session.html  TensorFlow-Tensor.html  TensorFlow-Types.html  doc-index-47.html  doc-index-58.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html  tensorflow.txt
docs/haddock/tensorflow-0.2.0.1/: TensorFlow-Build.html  TensorFlow-BuildOp.html  TensorFlow-ControlFlow.html  (+38 more)
google-shim/: google-shim.cabal
google-shim/src/Google/: Test.hs
nix/: overlay.nix  src.json  update
tensorflow/: tensorflow.cabal  third_party
tensorflow-core-ops/: Setup.hs  tensorflow-core-ops.cabal  third_party
tensorflow-logging/: tensorflow-logging.cabal
tensorflow-logging/src/TensorFlow/: .#Logging.hs  Logging.hs
tensorflow-logging/tests/: LoggingTest.hs
tensorflow-mnist/: tensorflow-mnist.cabal
tensorflow-mnist-input-data/: Setup.hs  tensorflow-mnist-input-data.cabal
tensorflow-mnist-input-data/src/TensorFlow/Examples/MNIST/: InputData.hs
tensorflow-mnist/app/: Main.hs
tensorflow-mnist/data/: MNIST.pb  MNISTBias.ckpt  MNISTWts.ckpt
tensorflow-mnist/src-data/TensorFlow/Examples/MNIST/: TrainedGraph.hs
tensorflow-mnist/src/TensorFlow/Examples/MNIST/: Parse.hs
tensorflow-mnist/tests/: ParseTest.hs
tensorflow-nn/: tensorflow-nn.cabal
tensorflow-nn/src/TensorFlow/: NN.hs
tensorflow-nn/tests/: NNTest.hs
tensorflow-opgen/: tensorflow-opgen.cabal
tensorflow-opgen/src/TensorFlow/: OpGen.hs
tensorflow-opgen/src/TensorFlow/OpGen/: AttrVal.hs  ParsedOp.hs
tensorflow-ops/: tensorflow-ops.cabal
tensorflow-ops/examples/: Regression.hs
tensorflow-ops/src/TensorFlow/: Convolution.hs  EmbeddingOps.hs  Gradient.hs  Logging.hs  Minimize.hs  Ops.hs  Variable.hs
tensorflow-ops/tests/: ArrayOpsTest.hs  BuildTest.hs  DataFlowOpsTest.hs  EmbeddingOpsTest.hs  FeedFetchBench.hs  GradientTest.hs  MatrixTest.hs  MiscTest.hs  NNTest.hs  OpsTest.hs  QueueTest.hs  RegressionTest.hs  TracingTest.hs  TypesTest.hs  VariableTest.hs
tensorflow-proto/: Setup.hs  tensorflow-proto.cabal
tensorflow-queue/: tensorflow-queue.cabal
tensorflow-queue/src/TensorFlow/: Queue.hs
tensorflow-queue/tests/: QueueTest.hs
tensorflow-records/: tensorflow-records.cabal
tensorflow-records-conduit/: tensorflow-records-conduit.cabal
tensorflow-records-conduit/src/TensorFlow/Records/: Conduit.hs
tensorflow-records/src/TensorFlow/: CRC32C.hs  Records.hs
tensorflow-records/tests/: Main.hs
tensorflow-test/: tensorflow-test.cabal
tensorflow-test/src/TensorFlow/: Test.hs
tensorflow/src/TensorFlow/: Build.hs  BuildOp.hs  ControlFlow.hs  Core.hs  Nodes.hs  Orphans.hs  Output.hs  Session.hs  Tensor.hs  Types.hs
tensorflow/src/TensorFlow/Internal/: FFI.hs  Raw.chs  VarInt.hs
tensorflow/tests/: FFITest.hs  VarIntTest.hs
tools/: get_mnist_webarchive.sh  haddock.sh  install_centos_dependencies.sh  install_macos_dependencies.sh  install_osx_dependencies.sh  nvidia-docker-wrapper.sh  userchroot.nix
(+1076 files in other folders)
