name:                google-shim
version:             0.1.0.0
synopsis:            Adapters to externalize TensorFlow code.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Google.Test
  build-depends:  base >= 4.7 && < 5
                , test-framework
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
