name:                tensorflow-mnist-input-data
version:             0.1.0.0
synopsis:            Downloader of input data for training MNIST.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Custom
cabal-version:       >=1.22
-- These files are downloaded automatically by Setup.hs. If the
-- automatic download fails, follow the instructions in error messages
-- displayed by Setup.hs.
data-dir:            data
data-files:          *.gz

library
  hs-source-dirs:  src
  exposed-modules: TensorFlow.Examples.MNIST.InputData
  other-modules:   Paths_tensorflow_mnist_input_data
  build-depends:  Cabal
                , HTTP
                , base >= 4.7 && < 5
                , bytestring
                , cryptonite
                , directory
                , filepath
                , network-uri
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
