name:                tensorflow-mnist-input-data
version:             0.1.0.0
synopsis:            Downloader of input data for training MNIST.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
license-file:        LICENSE
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Custom
cabal-version:       >=1.24
-- These files are downloaded automatically by Setup.hs. If the
-- automatic download fails, follow the instructions in error messages
-- displayed by Setup.hs.
data-dir:            data
data-files:          *.gz

library
  hs-source-dirs:  src
  exposed-modules: TensorFlow.Examples.MNIST.InputData
  other-modules:   Paths_tensorflow_mnist_input_data
  build-depends:   base >= 4.7 && < 5
  default-language: Haskell2010

custom-setup
  setup-depends: Cabal
               , HTTP
               , base >= 4.7 && < 5
               , bytestring
               , cryptonite
               , directory
               , filepath
               , network-uri

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
