name:                tensorflow-nn
version:             0.1.0.0
synopsis:            Friendly layer around TensorFlow bindings.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:   src
  exposed-modules: TensorFlow.NN
  build-depends:  base >= 4.7 && < 5
                , tensorflow-core-ops == 0.1.*
                , tensorflow == 0.1.*
                , tensorflow-ops == 0.1.*
  default-language:    Haskell2010


Test-Suite NNTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: NNTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , QuickCheck
               , base
               , tensorflow
               , tensorflow-test
               , tensorflow-ops
               , tensorflow-nn
               , google-shim
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , vector


source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
