name:                tensorflow-opgen
version:             0.2.0.1
synopsis:            Code generation for TensorFlow operations.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
license-file:        LICENSE
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     TensorFlow.OpGen.ParsedOp
                     , TensorFlow.OpGen
  build-depends:  proto-lens >= 0.4.0 && < 0.6.0
                , tensorflow-proto == 0.2.*
                , base >= 4.7 && < 5
                , bytestring
                , containers
                , filepath
                , lens-family
                , mainland-pretty
                , optparse-applicative
                , semigroups
                , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
