name:                tensorflow-ops
version:             0.2.0.1
synopsis:            Friendly layer around TensorFlow bindings.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
license-file:        LICENSE
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:   src
  exposed-modules: TensorFlow.Gradient
                 , TensorFlow.Ops
                 , TensorFlow.EmbeddingOps
                 , TensorFlow.Minimize
                 , TensorFlow.NN
                 , TensorFlow.Queue
                 , TensorFlow.Variable
  build-depends:  proto-lens >= 0.4.0 && < 0.6.0
                , base >= 4.7 && < 5
                , bytestring
                , fgl
                , mtl
                , data-default
                , lens-family
                , containers
                , tensorflow == 0.2.*
                , tensorflow-proto == 0.2.*
                , tensorflow-core-ops == 0.2.*
                , text
  default-language:    Haskell2010

Test-Suite RegressionTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: RegressionTest.hs
  hs-source-dirs: tests
  build-depends: base
               , HUnit
               , lens-family
               , transformers
               , random
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops

Test-Suite MatrixTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: MatrixTest.hs
  hs-source-dirs: tests
  build-depends: base
               , HUnit
               , random
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , tensorflow-test
               , test-framework
               , test-framework-hunit
               , transformers
               , vector

Test-Suite BuildTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: BuildTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , base
               , proto-lens
               , lens-family
               , tensorflow
               , tensorflow-ops
               , tensorflow-proto
               , test-framework
               , test-framework-hunit
               , transformers
               , vector

Test-Suite EmbeddingOpsTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: EmbeddingOpsTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , QuickCheck
               , base
               , proto-lens
               , lens-family
               , tensorflow
               , tensorflow-test
               , tensorflow-core-ops
               , tensorflow-ops
               , tensorflow-proto
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , transformers
               , vector

Test-Suite ArrayOpsTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: ArrayOpsTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , QuickCheck
               , base
               , proto-lens
               , lens-family
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , tensorflow-proto
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , transformers
               , vector

Test-Suite OpsTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: OpsTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , QuickCheck
               , base
               , bytestring
               , proto-lens
               , lens-family
               , temporary
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , tensorflow-proto
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , transformers
               , vector

Test-Suite VariableTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: VariableTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , base
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , test-framework
               , test-framework-hunit
               , transformers
               , vector


Test-Suite DataFlowOpsTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: DataFlowOpsTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , QuickCheck
               , base
               , proto-lens
               , lens-family
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , tensorflow-proto
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , vector

Test-Suite GradientTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: GradientTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , base
               , bytestring
               , proto-lens
               , lens-family
               , random
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , tensorflow-proto
               , test-framework
               , test-framework-hunit
               , transformers
               , vector

Test-Suite MiscTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: MiscTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , base
               , bytestring
               , vector
               , transformers
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , tensorflow-proto
               , test-framework
               , test-framework-hunit

Test-Suite NNTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: NNTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , QuickCheck
               , base
               , tensorflow
               , tensorflow-test
               , tensorflow-ops
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , vector

Test-Suite QueueTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: QueueTest.hs
  hs-source-dirs: tests
  -- Uses multiple threads and blocks without this option.
  ghc-options: -threaded
  build-depends: HUnit
               , base
               , bytestring
               , proto-lens
               , lens-family
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , test-framework
               , test-framework-hunit
               , transformers
               , vector

Test-Suite TracingTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TracingTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , base
               , bytestring
               , data-default
               , lens-family
               , tensorflow
               , tensorflow-ops
               , test-framework
               , test-framework-hunit

Test-Suite TypesTest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TypesTest.hs
  hs-source-dirs: tests
  build-depends: HUnit
               , QuickCheck
               , base
               , bytestring
               , proto-lens
               , lens-family
               , tensorflow
               , tensorflow-core-ops
               , tensorflow-ops
               , tensorflow-proto
               , transformers
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , vector

Benchmark FeedFetchBench
  default-language: Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    FeedFetchBench.hs
  hs-source-dirs: tests
  build-depends: base
               , criterion
               , deepseq
               , tensorflow
               , tensorflow-ops
               , transformers
               , vector
  ghc-options: -O2 -threaded

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
